--- a/app/views/web/index.erb
+++ b/app/views/web/index.erb
@@ -1,1 +1,6 @@
-Silvia selles started learning about fashion and design since the early days, being 
+<div class="row">
+  <div class="small-12 large-12 columns">
+      Silvia Sellés started to be interested in fashion at a very early age.
+  </div>
+</div>
+
