--- a/app/views/web/projects.erb
+++ b/app/views/web/projects.erb
@@ -1,1 +1,16 @@
-projects
+<div class="row">
+  <div class="small-12 large-12 columns">
+    <p>Some projects I've been working on recently, I hope you find them interesting</p>
+  </div>
+
+  <ul class="small-block-grid-2 medium-block-grid-2 large-block-grid-2">
+    <li><img src="http://i2.kym-cdn.com/entries/icons/original/000/000/510/angrybaby.jpg"/></li>
+    <li><img src="http://i2.kym-cdn.com/entries/icons/original/000/000/510/angrybaby.jpg"/></li>
+    <li><img src="http://i2.kym-cdn.com/entries/icons/original/000/000/510/angrybaby.jpg"/></li>
+    <li><img src="http://i2.kym-cdn.com/entries/icons/original/000/000/510/angrybaby.jpg"/></li>
+    <li><img src="http://i2.kym-cdn.com/entries/icons/original/000/000/510/angrybaby.jpg"/></li>
+    <li><img src="http://i2.kym-cdn.com/entries/icons/original/000/000/510/angrybaby.jpg"/></li>
+    <li><img src="http://i2.kym-cdn.com/entries/icons/original/000/000/510/angrybaby.jpg"/></li>
+  </ul>
+</div>
+
