--- a/app/stylesheets/foundation/_settings.scss
+++ b/app/stylesheets/foundation/_settings.scss
@@ -123,6 +123,13 @@ $include-html-global-classes: $include-html-classes;
 // $warning-color: #f08a24;
 // $info-color: #a0d3e8;
 
+$primary-color: #0075B2;
+$secondary-color: #03A4B2;
+$alert-color: #FF8b00;
+$success-color: #43AC6A;
+$warning-color: #FE8E00;
+$info-color: #00ADFF;
+
 // We use these to control various global styles
 // $body-bg: $white;
 // $body-font-color: $jet;
@@ -208,6 +215,8 @@ $include-html-global-classes: $include-html-classes;
 // - - - - - - - - - - - - - - - - - - - - - - - - -
 
 // $include-html-type-classes: $include-html-classes;
+
+ $header-font-family: 'Exo', 'Helvetica','Avenir','Arial', sans-serif;
 
 // We use these to control header font styles
 // $header-font-family: $body-font-family;
