--- a/app/views/web/index.erb
+++ b/app/views/web/index.erb
@@ -1,6 +1,7 @@
 <div class="row">
   <div class="small-12 large-12 columns">
-      Silvia Sellés started to be interested in fashion at a very early age.
+    Silvia Sellés started to be interested in fashion at a very early age.
+    <%= I18n.locale %>
   </div>
 </div>
 
