--- a/app/views/web/projects.erb
+++ b/app/views/web/projects.erb
@@ -2,15 +2,57 @@
   <div class="small-12 large-12 columns">
     <p>Some projects I've been working on recently, I hope you find them interesting</p>
   </div>
+    <%= I18n.locale %>
 
-  <ul class="small-block-grid-2 medium-block-grid-2 large-block-grid-2">
-    <li><img src="http://i2.kym-cdn.com/entries/icons/original/000/000/510/angrybaby.jpg"/></li>
-    <li><img src="http://i2.kym-cdn.com/entries/icons/original/000/000/510/angrybaby.jpg"/></li>
-    <li><img src="http://i2.kym-cdn.com/entries/icons/original/000/000/510/angrybaby.jpg"/></li>
-    <li><img src="http://i2.kym-cdn.com/entries/icons/original/000/000/510/angrybaby.jpg"/></li>
-    <li><img src="http://i2.kym-cdn.com/entries/icons/original/000/000/510/angrybaby.jpg"/></li>
-    <li><img src="http://i2.kym-cdn.com/entries/icons/original/000/000/510/angrybaby.jpg"/></li>
-    <li><img src="http://i2.kym-cdn.com/entries/icons/original/000/000/510/angrybaby.jpg"/></li>
-  </ul>
+  <div class="small-block-grid-2 medium-block-grid-2 large-block-grid-2">
+    <li>
+    <div class="row">
+      <div class="small-12 large-12 columns">
+        <%= image_tag 'funda011.jpg' %>
+      </div>
+    </div>
+    <div class="row">
+      <div class="small-12 large-12 columns">
+        <p> blablablabla </p>
+      </div>
+    </div>
+    </li>
+    <li>
+    <div class="row">
+      <div class="small-12 large-12 columns">
+        <%= image_tag 'funda012.jpg' %>
+      </div>
+    </div>
+    <div class="row">
+      <div class="small-12 large-12 columns">
+        <p> blablablabla </p>
+      </div>
+    </div>
+    </li>
+    <li>
+    <div class="row">
+      <div class="small-12 large-12 columns">
+        <%= image_tag 'funda021.jpg' %>
+      </div>
+    </div>
+    <div class="row">
+      <div class="small-12 large-12 columns">
+        <p> blablablabla </p>
+      </div>
+    </div>
+    </li>
+    <li>
+    <div class="row">
+      <div class="small-12 large-12 columns">
+        <%= image_tag 'funda022.jpg' %>
+      </div>
+    </div>
+    <div class="row">
+      <div class="small-12 large-12 columns">
+        <p> blablablabla </p>
+      </div>
+    </div>
+    </li>
+
+  </div>
 </div>
-
