--- a/app/stylesheets/foundation/_settings.scss
+++ b/app/stylesheets/foundation/_settings.scss
@@ -124,7 +124,7 @@ $include-html-global-classes: $include-html-classes;
 // $info-color: #a0d3e8;
 
 $primary-color: #0075B2;
-$secondary-color: #03A4B2;
+$secondary-color: #769ebf;
 $alert-color: #FF8b00;
 $success-color: #43AC6A;
 $warning-color: #FE8E00;
@@ -216,7 +216,7 @@ $info-color: #00ADFF;
 
 // $include-html-type-classes: $include-html-classes;
 
- $header-font-family: 'Exo', 'Helvetica','Avenir','Arial', sans-serif;
+ $header-font-family: 'Exo', 'Arial', 'Helvetica','Avenir', sans-serif;
 
 // We use these to control header font styles
 // $header-font-family: $body-font-family;
@@ -1174,7 +1174,7 @@ $info-color: #00ADFF;
 // $side-nav-padding: rem-calc(14 0);
 
 // We use these to control list styles.
-// $side-nav-list-type: none;
+ $side-nav-list-type: none;
 // $side-nav-list-position: outside;
 // $side-nav-list-margin: rem-calc(0 0 7 0);
 
@@ -1409,8 +1409,8 @@ $info-color: #00ADFF;
 // $include-html-top-bar-classes: $include-html-classes;
 
 // Background color for the top bar
-// $topbar-bg-color: $oil;
-// $topbar-bg: $topbar-bg-color;
+ $topbar-bg-color: $primary-color;
+ $topbar-bg: $topbar-bg-color;
 
 // Height and margin
 // $topbar-height: rem-calc(45);
@@ -1428,8 +1428,8 @@ $info-color: #00ADFF;
 // $topbar-link-weight: $font-weight-normal;
 // $topbar-link-font-size: rem-calc(13);
 // $topbar-link-hover-lightness: -10%; // Darken by 10%
-// $topbar-link-bg: $topbar-bg;
-// $topbar-link-bg-hover: $jet;
+   $topbar-link-bg: $topbar-bg;
+   $topbar-link-bg-hover: $secondary-color;
 // $topbar-link-bg-color-hover: $charcoal;
 // $topbar-link-bg-active: $primary-color;
 // $topbar-link-bg-active-hover: scale-color($primary-color, $lightness: -14%);
