--- a/app/views/layouts/app.erb
+++ b/app/views/layouts/app.erb
@@ -1,41 +1,42 @@
 <html>
-  <head>
-    <title> SilviaSelles.com </title>
-    <%= stylesheet_link_tag    :application %>
-    <%= javascript_include_tag :modernizr %>
+<head>
+<title> SilviaSelles.com </title>
+<%= stylesheet_link_tag    :application %>
+<%= javascript_include_tag :modernizr %>
 
-    <%= javascript_include_tag :jquery, :fastclick %>
-    <%= javascript_include_tag 'js/foundation.js' %>
-    <script> $(document).foundation(); </script>
-  </head>
-  <body>
-    <div id="header">
-      <div class="row">
-        <div class="small-12 small-centered columns">
-          <h1> Silvia Selles </h1>
-        </div>
-      </div>
-    </div>
-    <div class="contain-to-grid">
-      <nav class="top-bar" data-topbar data-options="">
-        <section class="top-bar-section">
-          <ul class="left">
-            <li class=""><%= link_with_locale "/", "/" %></li>
-            <li class=""><%= link_with_locale "Projects", "/projects" %></li>
-            <li class=""><%= link_with_locale "AboutMe", "/about" %></li>
-          </ul>
-           <ul class="right">
-             <li class=""><a href="?locale=en#"><%= image_tag 'England.png'%></a></li>
-             <li class=""><a href="?locale=de#"><%= image_tag 'Germany.png'%></a></li>
-          </ul>
-        </section>
-      </nav>
-    </div>
-    <div id="body">
-      <%= yield %>
-      <section class="credits">
-          <%= Time.now.year %> Silvia Selles
+<link href='http://fonts.googleapis.com/css?family=Exo:400,500,700' rel='stylesheet' type='text/css'>
+
+<%= javascript_include_tag :jquery, :fastclick %>
+<%= javascript_include_tag 'js/foundation.js' %>
+<script> $(document).foundation(); </script>
+</head>
+<body>
+<div id="header">
+  <div class="container-to-grid">
+    <nav class="top-bar" data-topbar role="navigation">
+      <ul class="title-area">
+        <li class="name">
+        <h2><a href="/">Silvia Selles</a></h2>
+        </li>
+      </ul>
+      <section class="top-bar-section">
+        <ul class="left">
+          <li class=""><%= link_with_locale "Projects", "/projects" %></li>
+          <li class=""><%= link_with_locale "Contact", "/contactme" %></li>
+        </ul>
+        <ul class="right">
+          <li class=""><a href="?locale=en#"><%= image_tag 'England.png'%></a></li>
+          <li class=""><a href="?locale=de#"><%= image_tag 'Germany.png'%></a></li>
+        </ul>
       </section>
-    </div>
-  </body>
+    </nav>
+  </div>
+</div>
+<div id="body">
+  <%= yield %>
+</div>
+<div id="footer">
+  @ <%= Time.now.year %> Silvia Selles
+</div>
+</body>
 </html>
