--- a/app/views/web/contactme.erb
+++ b/app/views/web/contactme.erb
@@ -5,7 +5,7 @@
     <div class="large-12 columns">
       <div class="small-9 columns">
         <label>From:
-          <input type="text" id="right-label" placeholder="Your name" required>
+          <input type="text" id="from" placeholder="Your name" required>
         </label>
       </div>
     </div>
@@ -14,7 +14,7 @@
     <div class="large-12 columns">
       <div class="small-9 columns">
         <label>Email:
-          <input type="text" id="right-label" pattern="email" placeholder="Your email" required>
+          <input type="email" id="email" placeholder="Your email" required>
         </label>
       </div>
     </div>
