center some stuff more properly

--- a/app/views/web/contactme.erb
+++ b/app/views/web/contactme.erb
@@ -1,6 +1,6 @@
 <h1>Contact <small>(me)</small></h1>
 
-<form data-abide>
+<form data-abide class="centered">
   <div class="row">
     <div class="large-12 columns">
       <div class="small-9 columns">
