--- a/app/stylesheets/application.scss
+++ b/app/stylesheets/application.scss
@@ -104,10 +104,14 @@ body {
   color: #fff;
 }
 
-.centered {
+.imgcentered {
   margin-left: auto;
   margin-right: auto;
   display: block;
+}
+
+form.centered {
+  margin-left: 10%;
 }
 
 .no-select-text {
