--- a/admin/views/layouts/application.erb
+++ b/admin/views/layouts/application.erb
@@ -16,7 +16,7 @@
     <div class="navbar navbar-fixed-top">
       <div class=navbar-inner>
         <div class=container>
-          <%= link_to 'Padrino', url(:base, :index), :class => 'navbar-brand', :title => 'Padrino Admin' %>
+          <%= link_to 'silviaselles', url(:base, :index), :class => 'navbar-brand', :title => 'Admin' %>
           <ul class="nav navbar-nav pull-right">
             <li class=navbar-edit-account><%= link_to tag_icon(:user), url(:accounts, :edit, :id => current_account.id), :title => pat(:profile), :class => 'navbar-nav-link' %></li>
             <li class=navbar-logout>
@@ -49,7 +49,7 @@
 
     <footer>
       <div class='footer-wrapper container'>
-        <p class='pull-left'>Copyright &copy; 2015 Your Site - Powered by Padrino v.0.12.5</p>
+        <p class='pull-left'>Copyright &copy; 2015 SilviaSelles.com - Powered by Padrino v.0.12.5</p>
         <ul class='pull-right footer-links'>
           <li><%= link_to tag_icon(:home, 'web'), 'http://www.padrinorb.com', :target => :_blank, :class => 'footer-links-link' %></li>
           <li><%= link_to tag_icon(:heart, 'blog'), 'http://www.padrinorb.com/blog', :target => :_blank, :class => 'footer-links-link' %></li>
