--- a/admin/views/project_photos/new.erb
+++ b/admin/views/project_photos/new.erb
@@ -3,7 +3,7 @@
   <li class="active"> <%= link_to tag_icon(:plus, pat(:new)), url(:project_photos, :new) %></li>
 </ul>
 <div class="tabs-content">
-  <% form_for :project_photo, url(:project_photos, :create), :class => 'form-horizontal' do |f| %>
+  <% form_for :project_photo, url(:project_photos, :create), :class => 'form-horizontal', :multipart => true do |f| %>
     <%= partial 'project_photos/form', :locals => { :f => f } %>
  <% end %>
 </div>
