--- a/admin/views/project_photos/_form.erb
+++ b/admin/views/project_photos/_form.erb
@@ -16,10 +16,22 @@
   </div>
 </fieldset>
 
+<% error = @project_photo.errors.key?(:frontpage) && @project_photo.errors[:frontpage].count > 0 %>
+<fieldset class='control-group <%= error ? 'has-error' : ''%>'>
+  <%= f.label :frontpage, :class => 'control-label' %>
+  <div class='controls'>
+   <%= check_box_tag :frontpage, :class => 'form-control', :value => 'True' %>
+   <span class='help-inline'><%= error ? f.error_message_on(:frontpage) : "Ex: true or false" %></span>
+  </div>
+</fieldset>
+
+<fieldset class='control-group <%= error ? 'has-error' : ''%>'>
+  <%= f.label :file, :class => 'control-label' %>
+  <input id="fileupload" class="form-control" type="file" name="files[]" data-url="images/upload" multiple>
+</fieldset>
+
 <div class="form-actions">
   <%= f.submit pat(:save), :class => 'btn btn-primary' %>
-  &nbsp;
-  <%= f.submit pat(:save_and_continue), :class => 'btn btn-info', :name => 'save_and_continue' %>
   &nbsp;
   <%= link_to pat(:cancel), url(:project_photos, :index), :class => 'btn btn-default' %>
 </div>
