--- a/admin/views/photo_comments/_form.erb
+++ b/admin/views/photo_comments/_form.erb
@@ -2,7 +2,7 @@
 <fieldset class='control-group <%= error ? 'has-error' : ''%>'>
   <%= f.label :project_photo_id, :class => 'control-label' %>
   <div class='controls'>
-    <%= f.text_field :project_photo_id, :class => 'form-control input-xlarge input-with-feedback', :autofocus => true %>
+    <%= select_tag(:project_photo_id, :options => @list_of_photos, :class => 'form-control input-xlarge input-with-feedback' ) %>
     <span class='help-inline'><%= error ? f.error_message_on(:project_photo_id) : "Ex: a simple text" %></span>
   </div>
 </fieldset>
@@ -18,7 +18,7 @@
 <fieldset class='control-group <%= error ? 'has-error' : ''%>'>
   <%= f.label :i18n, :class => 'control-label' %>
   <div class='controls'>
-    <%= f.text_field :i18n, :class => 'form-control input-xlarge input-with-feedback' %>
+    <%= select_tag(:i18n, :options => ['red', 'yellow'], :class => 'form-control input-xlarge input-with-feedback' ) %>
     <span class='help-inline'><%= error ? f.error_message_on(:i18n) : "Ex: a simple text" %></span>
   </div>
 </fieldset>
