show comments in the photos at the front page including localization

--- a/app/views/web/projects.erb
+++ b/app/views/web/projects.erb
@@ -12,7 +12,7 @@
           <%= image_tag photo[:location], :alt => photo[:alt] %>
         </div>
         <div class="small-12 large-12 columns">
-          <p> blablablabla </p>
+          <p> <%= photo[:comment] %> </p>
         </div>
       </li>
     <% end %>
