--- a/admin/views/project_photos/_form.erb
+++ b/admin/views/project_photos/_form.erb
@@ -20,7 +20,7 @@
 <fieldset class='control-group <%= error ? 'has-error' : ''%>'>
   <%= f.label :frontpage, :class => 'control-label' %>
   <div class='controls'>
-   <%= check_box_tag :frontpage, :class => 'form-control', :value => 'True' %>
+   <%= f.check_box :frontpage, :class => 'form-control', :value => 'True' %>
    <span class='help-inline'><%= error ? f.error_message_on(:frontpage) : "Ex: true or false" %></span>
   </div>
 </fieldset>
