made default translations available for english

--- a/app/views/layouts/app.erb
+++ b/app/views/layouts/app.erb
@@ -21,8 +21,8 @@
       </ul>
       <section class="top-bar-section">
         <ul class="left">
-          <li class=""><%= link_with_locale "Projects", "/projects" %></li>
-          <li class=""><%= link_with_locale "Contact", "/contactme" %></li>
+          <li class=""><%= link_with_locale  t('menu.projects'), "/projects" %></li>
+          <li class=""><%= link_with_locale  t('menu.contact'), "/contactme" %></li>
         </ul>
         <ul class="right">
           <li class=""><a href="?locale=en#"><%= image_tag 'England.png'%></a></li>
