--- a/app/views/web/projects.erb
+++ b/app/views/web/projects.erb
@@ -1,8 +1,8 @@
-<h1>Silvia Selles <small>(My Projects)</small></h1>
+<h1>Silvia Selles <small>(<%= t('projects.me') %>)</small></h1>
 
 <div class="row">
   <div class="small-12 large-12 columns">
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec mauris erat, porttitor et odio et, vulputate fermentum urna. Pellentesque iaculis non arcu vel mattis. Duis consequat dui augue, in congue justo dictum et. Integer quis arcu vulputate, posuere enim vel, molestie orci. Aenean a ornare orci, ac consectetur nibh. Sed ut congue diam. Nulla vulputate luctus porttitor. Nulla sit amet dolor dui. Donec mollis auctor sem, sed porttitor est rhoncus vel. In turpis elit, mattis ut libero at, hendrerit faucibus est. Cras sit amet mauris sed erat feugiat sodales et vel quam. Cras augue nunc, tincidunt eget orci in, posuere maximus orci. Ut massa ex, pharetra sit amet leo finibus, fringilla varius tortor. Phasellus vestibulum arcu justo, rhoncus volutpat tortor finibus vitae. Curabitur at lorem ut sem viverra gravida id a neque. Mauris eu congue odio.</p>
+    <p><%= t('projects.intro') %></p>
   </div>
 
   <div class="small-block-grid-3 medium-block-grid-3 large-block-grid-3">
