--- a/app/views/web/index.erb
+++ b/app/views/web/index.erb
@@ -1,14 +1,15 @@
-<h1>Silvia Selles <small>(me)</small></h1>
+<h1>Silvia Selles <small>(<%= t('me') %>)</small></h1>
 
 <div class="row">
   <div class="small-12 large-12 columns">
-    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut eget nisl posuere, viverra orci a, ullamcorper quam. Nunc tempus porta dolor. Morbi tortor nulla, gravida molestie feugiat sit amet, feugiat ac ligula. Ut eget augue ut mi tristique porta at nec magna. Sed rhoncus sapien tellus. Aenean auctor nisl orci, a fermentum felis pretium vel. Nulla facilisi. Etiam ultrices accumsan augue eu euismod. Phasellus ut scelerisque nulla. Aliquam ac elementum nulla. Praesent dapibus sapien quis laoreet efficitur. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Donec id aliquam nisl.</p>
+    <p> <%= t('intro.before') %> </p>
   </div>
 
   <%= image_tag 'portada.jpg', { :height => "340", :weight => "480", :class => "imgcentered" } %>
 
   <div class="small-12 large-12 columns">
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut eget nisl posuere, viverra orci a, ullamcorper quam. Nunc tempus porta dolor. Morbi tortor nulla, gravida molestie feugiat sit amet, feugiat ac ligula. Ut eget augue ut mi tristique porta at nec magna. Sed rhoncus sapien tellus. Aenean auctor nisl orci, a fermentum felis pretium vel. Nulla facilisi. Etiam ultrices accumsan augue eu euismod. Phasellus ut scelerisque nulla. Aliquam ac elementum nulla. Praesent dapibus sapien quis laoreet efficitur. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Donec id aliquam nisl.</p>
+    <p> <%= t('intro.after') %> </p>
+
   </div>
 </div>
 
