--- a/app/views/web/index.html.erb
+++ b/app/views/web/index.html.erb
@@ -1,2 +1,12 @@
-<h1>Web#index</h1>
-<p>Find me in app/views/web/index.html.erb</p>
+<table style="width:100%">
+  <tr>
+    <td>Jill</td>
+    <td>Smith</td> 
+    <td>50</td>
+  </tr>
+  <tr>
+    <td>Eve</td>
+    <td>Jackson</td> 
+    <td>94</td>
+  </tr>
+</table>
