--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Silviasellescom</title>
+  <title>Silvia Selles</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
 
-<%= yield %>
+<div id="page" class="site">
+  <div id="header" class="page-header"> Silvia Selles</div>
+  <div id="main">
+    <div id="secondary" class="widgets">
+      <ul>
+        <li>Foo</li>
+        <li>Foo</li>
+        <li>Foo</li>
+        <li>Foo</li>
+      </ul>
+    </div>
+    <div id="primary"   class="content">
+      <%= yield %>
+    </div>
+  </div>
+</div>
 
 </body>
 </html>
