add dashed buttons style

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,10 +13,9 @@
   <div id="main">
     <div id="secondary" class="widgets">
       <ul>
-        <li>Foo</li>
-        <li>Foo</li>
-        <li>Foo</li>
-        <li>Foo</li>
+        <li><a class="btn2" href="#">Foo</a></li>
+        <li><a class="btn2" href="#">Bar</a></li>
+        <li><a class="btn2" href="#">FooBar</a></li>
       </ul>
     </div>
     <div id="primary"   class="content">
