--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -70,6 +70,14 @@ body.single-attachment .content,
   float: left;
 }
 
+.widgets ul {
+  list-style-type: none;
+}
+
+.widgets ul li {
+  margin-top: 32px;
+}
+
  /* IE8 and IE7 - Left and Right Sidebars */
 .ie  .custom-layout .content {
     width: 50%;
@@ -81,5 +89,55 @@ body.single-attachment .content,
     width: 20%;
     position: relative;
     margin-left: -750px;
+}
+
+
+
+/**
+ * Butons
+ **/
+
+.btn2 {
+  -webkit-border-radius: 1;
+  -moz-border-radius: 1;
+  border-radius: 1px;
+  border-style:dashed;
+  border-width:1px;
+  border-color: #3cb0fd;
+  color: #3cb0fd;
+  font-size: 20px;
+  padding: 10px 60px 10px 60px;
+  text-decoration: none;
+
+}
+
+.btn {
+  -webkit-border-radius: 1;
+  -moz-border-radius: 1;
+  border-radius: 1px;
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 20px;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+}
+
+.blue:hover {
+  background: #3cb0fd;
+  background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
+  text-decoration: none;
+}
+
+.blue {
+  background: #3498db;
+  background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
+  background-image: -moz-linear-gradient(top, #3498db, #2980b9);
+  background-image: -ms-linear-gradient(top, #3498db, #2980b9);
+  background-image: -o-linear-gradient(top, #3498db, #2980b9);
+  background-image: linear-gradient(to bottom, #3498db, #2980b9);
 }
 
